welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:8: error: Missing closing brace `}' assumed here
     nbPas = nbPas + 1 }
     ^